--- a/course-materials/lecture-slides/SLIDES-syllabus.qmd
+++ b/course-materials/lecture-slides/SLIDES-syllabus.qmd
@@ -31,7 +31,7 @@ format:
 This course will focus on the basic principles for effective communication through data visualization and using programmatic tools and workflows for creating and sharing data visualizations with diverse audiences.
 :::
 
-```{r}
+```{r horst-eds}
 #| eval: true 
 #| echo: false
 #| fig-align: "center"
@@ -59,7 +59,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
     - Bren 3022A (SCF)
 :::
 
-```{r}
+```{r brenhall}
 #| eval: true 
 #| echo: false
 #| fig-align: "center"
@@ -84,7 +84,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 **Instructor**
 :::
 
-```{r}
+```{r sam}
 #| eval: true 
 #| echo: false
 #| fig-align: "center"
@@ -107,7 +107,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 **Co-instructor**
 :::
 
-```{r}
+```{r annie}
 #| eval: true 
 #| echo: false
 #| fig-align: "center"
@@ -139,7 +139,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 <p class="dark-blue-text">**What's your favorite color or typeface?**</p>
 </div>
 
-```{r}
+```{r chat-peers-countdown}
 countdown::countdown(
   minutes = 2,
   # left = 0, right = 0,
@@ -232,7 +232,7 @@ Step 2: For exam accommodations (more time, private setting, etc.) students need
 **[https://eds-240-data-viz.github.io/](https://eds-240-data-viz.github.io/){target="_blank"}**
 :::
 
-```{r}
+```{r website}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -268,7 +268,7 @@ Website link is also bookmarked at the top of the **#eds-240-data-viz** Slack ch
 | 3   | 1/21    | fundamental chart types (evolution & amounts / rankings)            |
 | 4   | 1/28    | fundamental chart types (relationships), what makes a good viz      |
 | 5   | 2/05    | enhancing visualizations (colors)                                   |
-| 6   | 2/11    | infogrpahic design with Affinity                                    |
+| 6   | 2/11    | infographic design with Affinity                                    |
 | 7   | 2/18    | enhancing visualizations (typography & annotations)                 |
 | 8   | 2/25    | data storytelling, people as data                                   |
 | 9   | 3/04    | alternative chart types                                             |
@@ -276,7 +276,7 @@ Website link is also bookmarked at the top of the **#eds-240-data-viz** Slack ch
 :::
 
 ::: {.column width="50%"}
-```{r}
+```{r course-materials}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -286,10 +286,6 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 :::
 
 ::::
-
-<!-- ::: {.center-text}
-*Lab sections are held every week*
-::: -->
 
 ---
 
@@ -301,7 +297,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 
 Please be sure to carefully complete all required prep (e.g. installing packages, downloading data) under the **Pre-class Prep** section (organized by week) before lecture -- be mindful that some items may take time to download/install. 
 
-```{r}
+```{r prelec-prep}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
@@ -310,11 +306,11 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 ```
 
 ::: {.center-text}
-***It is highly recommended that you do this well in advance<sup>1</sup> of attending lecture.***
+***It is highly recommended that you do this in advance<sup>1</sup> of attending lecture.***
 :::
 
 ::: {.footer}
-<sup>1</sup>Except downloading `.qmd` templates -- please hold off until each Wednesday morning, as changes are likely to occur up until just before class {{< fa face-smile title="a smiling face" >}}
+<sup>1</sup>I may be making changes to template files ahead of class -- I'll let you know if you need to redownload the latest version, if so {{< fa face-smile title="a smiling face" >}}
 :::
 
 ---
@@ -332,7 +328,7 @@ Your course grade will be based off the following:
 :::
 
 ::: {.incremental}
-- **3 Homeworks (HWs)** - longer assignments where you'll apply conceptual knowledge & technical skills to data viz tasks
+- **3 Homeworks (HWs)** - assignments where you'll apply conceptual knowledge & technical skills to data viz tasks using instructor-chosen data sets
 - **5 Final Project Milestones (FPMs)** - required milestones designed to help you make steady progress on your final project deliverables
 - **3 Self-reflections (SRs)** - a place to reflect on your learning plan / goals, challenges, etc. 
 - **3 rounds of Peer Feedback (PF)** - opportunities to give and receive constructive feedback on your final project data visualizations (lab sessions, weeks 7-9)
@@ -345,6 +341,91 @@ Your course grade will be based off the following:
 
 ::: {.center-text .teal-text}
 **PLEASE NOTE:** Your last FPM is an in-person flash talk during finals week (3/19 from 1:00-3:30pm)
+:::
+
+---
+
+## {#assignment-links data-menu-title="You can view all assignments"} 
+
+[All assignments are published]{.slide-title}
+
+<hr>
+
+<br>
+
+:::: {.columns}
+::: {.column width="50%"}
+All assignments (HWs, FPMs, SRs) are published on the [assignments page](../../assignments.qmd){target="_blank"}.
+
+<br>
+
+**You are not expected to look ahead**, but materials are available so you can see what's coming throughout the quarter and plan your time, if helpful.
+
+<br>
+
+**Please note:** we will not be grading assignments before thier listed due dates.
+:::
+
+::: {.column width="50%"}
+```{r assignments}
+#| eval: true
+#| echo: false
+#| fig-align: "center"
+#| out-width: "100%"
+knitr::include_graphics(here::here("course-materials", "images", "lecture-slides", "assignments.png"))
+```
+:::
+::::
+
+. . .
+
+<br>
+
+::: {.center-text .teal-text}
+**Start working on HW #1 (due next Wednesday 1/14) & SR #1 (due this Friday 1/9) now!**
+:::
+
+---
+
+## {#final-project data-menu-title="Final Project"} 
+
+[Final project sneak peak]{.slide-title}
+
+<hr>
+
+::: {.center-text .teal-text}
+**data-driven infographic + blog post + flash talk **
+:::
+
+. . .
+
+:::: {.columns}
+
+::: {.column width="50%"}
+```{r pepper}
+#| eval: true
+#| echo: false
+#| out-width: "77%"
+#| fig-align: "center"
+knitr::include_graphics(here::here("course-materials", "images", "lecture-slides", "pepper2025-salmon.png"))
+```
+:::
+
+::: {.column width="50%"}
+```{r kochuten}
+#| eval: true
+#| echo: false
+#| out-width: "72%"
+#| fig-align: "center"
+knitr::include_graphics(here::here("course-materials", "images", "lecture-slides", "kochuten2025-hoverflies.png"))
+```
+:::
+
+::::
+
+
+::: {.footer}
+Infographics by [Nicole Pepper](https://nicolelpepper.github.io/blogs/2025-03-25-an-upstream-battle/){target="_blank"} (MEDS 2025) & [Marina Kochuten](https://marinakochuten.github.io/blog-posts/hoverflies/){target="_blank"}
 :::
 
 ---
@@ -427,7 +508,7 @@ Traditional grading = points are awarded for correct answers on assessments; gra
 
 . . .
 
-[{{< fa cart-shopping >}}]{.teal-text} **trade tokens** for a *second* revision & resubmission attempt and / or 24hr extension on assignments; track & use your tokens using the [EDS 240 Token Dashboard](https://script.google.com/a/macros/ucsb.edu/s/AKfycbzzOJWbhY6xGtxcwceK7bdgk9DkUoteaFMnJwIGgUYq-7vMeduskNUt5Lwj2uDaaXVI/exec){target="_blank"}
+[{{< fa cart-shopping >}}]{.teal-text} **trade tokens** for a *second* revision & resubmission attempt and / or 24hr extension on assignments; track & use your tokens using the [EDS 240 Token Dashboard](https://script.google.com/a/macros/ucsb.edu/s/AKfycbx2bFyK5kpsqBlvYgWnQm64YNehPWeFAxl9BqMPoRFjE1MSOkkx_Bf0PkFa1Z6_YkRh/exec){target="_blank"}
 
 <br>
 
@@ -453,40 +534,6 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 Use the Grade Tracker to determine your course grade & read the syllabus for additional [grading clarifications & notes](https://docs.google.com/document/d/19Fr6XxobSM7OAdqcpZ7AyZ4qGHO5iLyS6iGEkP4W7SU/edit?tab=t.0#heading=h.o6q63avz97mp){target="_blank"}
 :::
 
----
-
-## {#assignment-links data-menu-title="You can view all assignments"} 
-
-[All assignments are published]{.slide-title}
-
-<hr>
-
-<br>
-<br>
-
-:::: {.columns}
-::: {.column width="50%"}
-All assignments (HWs, FPMs, SRs) are published on the [assignments page](../../assignments.qmd){target="_blank"}.
-
-<br>
-
-**You are not expected to look ahead**, but materials are available so you can see what's coming throughout the quarter and plan your time, if helpful.
-
-<br>
-
-**Please note:** we will not be grading assignments before thier listed due dates.
-:::
-
-::: {.column width="50%"}
-```{r}
-#| eval: true
-#| echo: false
-#| fig-align: "center"
-#| out-width: "100%"
-knitr::include_graphics(here::here("course-materials", "images", "lecture-slides", "assignments.png"))
-```
-:::
-::::
 ---
 
 ## {#GenAI data-menu-title="GenAI"} 
