Update with new lab links

--- a/course-materials/lab/LAB-EXERCISE-data-wrangling2.qmd
+++ b/course-materials/lab/LAB-EXERCISE-data-wrangling2.qmd
@@ -13,6 +13,7 @@ It's up to you to organize your own `week1-lab.qmd` file (i.e. there is no templ
 ```{r}
 #| eval: true
 #| echo: false
+#| output: false
 #| warning: false
 #| message: false
 
@@ -97,7 +98,7 @@ stressor_clean |>
 
 <br>
 
-1.Download the `stressor.csv` here[https://drive.google.com/file/d/1T4cOrd6Fyyq-iep6Jg_6sFjmO-yYX1oK/view?usp=drive_link]. [**Load the `{tidyverse}` and `{janitor}`  packages, and read in `stressor.csv`. Perform some basic data exploration.**]{.teal-text} Use the `{here}` package to read in your data and check out things like the dimensions, structure, types of variables, unique observations, etc. Read through the [metadata](https://esmis.nal.usda.gov/sites/default/release-files/rn301137d/8g84nk42x/00000x890/hcny0821.pdf){target="_blank"}. This data came from [tidytuesday](https://github.com/rfordatascience/tidytuesday/tree/main/data/2022/2022-01-11). In an effort to provide a data wrangling activity, the data was messified using the `messy` package in R. 
+1.Download the `stressor.csv` [here](https://drive.google.com/file/d/1T4cOrd6Fyyq-iep6Jg_6sFjmO-yYX1oK/view?usp=drive_link). [**Load the `{tidyverse}` and `{janitor}`  packages, and read in `stressor.csv`. Perform some basic data exploration.**]{.teal-text} Use the `{here}` package to read in your data and check out things like the dimensions, structure, types of variables, unique observations, etc. Read through the [metadata](https://esmis.nal.usda.gov/sites/default/release-files/rn301137d/8g84nk42x/00000x890/hcny0821.pdf){target="_blank"}. This data came from [tidytuesday](https://github.com/rfordatascience/tidytuesday/tree/main/data/2022/2022-01-11). In an effort to provide a data wrangling activity, the data was messified using the `messy` package in R. 
 
 2. [**Consider what data *cleaning* you might need to perform.**]{.teal-text} Discuss any curious data formatting (e.g. data types, inconsistent observation names, missing values, etc.) that you discovered during your data exploration step, above. What might you need to address in your next data wrangling steps?
 
