Archive fracking lab

--- a/course-materials/lab/LAB-SLIDES-data-wrangling-stressors.qmd
+++ b/course-materials/lab/LAB-SLIDES-data-wrangling-stressors.qmd
@@ -149,5 +149,5 @@ This data is available in a yearly report from the USDA. TidyTuesday processed t
 . . . 
 
 ::: {.center-text .body-text-l}
-Open up the [Week 1 Lab: Exercise](week1-exercise.qmd) for instructions / next steps.
+Open up the [Week 1 Lab: Exercise](LAB-EXERCISE-data-wrangling-stressors.qmd) for instructions / next steps.
 :::
