added optional exercise to end of distributions lecture; moved alt text lab to week2

--- a/course-materials/lab/LAB-EXERCISE-alt-text.qmd
+++ b/course-materials/lab/LAB-EXERCISE-alt-text.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Week 3 Lab: Exercise"
+title: "Week 2 Lab: Exercise"
 subtitle: "Writing alt text"
-description: "Tuesday January 21^st^, 2025"
+description: "January 15^th^, 2026"
 ---
 
 ::: {.callout-note}
@@ -55,7 +55,7 @@ Dot plots are particularly useful for visualizing variability within a single me
 It's easy to confuse dot plots with scatter plots, which alternatively are used to visualize a relationship between two (or sometimes three) numeric variables.
 :::
 
-![](images/nyt-monthly-temp.png){fig-alt="Alt text goes here"}
+![](../images/lab-materials/nyt-monthly-temp.png){fig-alt="Alt text goes here"}
 
 ## Example 3 (Fig 1A from [Chapman et al. 2024](https://www.science.org/doi/full/10.1126/science.adh8874){target="_blank"}):
 
@@ -77,7 +77,7 @@ The associated figure caption for this figure:
 >The >2.6 billion species observations in the Global Biodiversity Information Facility (GBIF) database are disproportionately from high-income countries.
 :::
  
-<img src="images/chapman-etal-2024.png" alt="Alt text goes here" width="700px">
+<img src="../images/lab-materials/chapman-etal-2024.png" alt="Alt text goes here" width="700px">
 
 ## Example 4 (Write alt text for a viz of your choice)
 
