--- a/course-materials/lab/LAB-SLIDES-alt-text.qmd
+++ b/course-materials/lab/LAB-SLIDES-alt-text.qmd
@@ -13,13 +13,13 @@ editor_options:
 
 ## {#title-slide data-menu-title="Title Slide" background="#047C91"} 
 
-[EDS 240: Lab 3]{.custom-title}
+[EDS 240: Lab 2]{.custom-title}
 
 [*Alt Text*]{.custom-subtitle}
 
 <hr class="hr-dark-blue">
 
-[Week 3 | January 21^st^, 2025]{.custom-subtitle3}
+[Week 2 | January 15^th^, 2026]{.custom-subtitle3}
 
 ---
 
