--- a/course-materials/lab/LAB-SOLUTION-alt-text.qmd
+++ b/course-materials/lab/LAB-SOLUTION-alt-text.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Week 3 Lab: Solution"
+title: "Week 2 Lab: Solution"
 subtitle: "Writing alt text"
-description: "Tuesday January 21^st^, 2025"
+description: "January 15^st^, 2026"
 ---
 
 ::: {.callout-note}
@@ -54,13 +54,13 @@ ggplot(data = penguins, aes(x = body_mass_g, fill = species)) +
 
 **Alt text:** A dot plot of monthly global temperatures compared to the 20th-century average, where monthly global temperatures are increasing over time. Nearly every month since the mid-1970s is warmer than the 20th-century average, with 12 record-breaking hot months occurring between 2015-2023.
 
-![](images/nyt-monthly-temp.png){fig-alt="A dot plot of monthly global temperatures compared to the 20th-century average, where monthly global temperatures are increasing over time. Nearly every month since the mid-1970s is warmer than the 20th-century average, with 12 record-breaking hot months occurring between 2015-2023."}
+![](../images/lab-materials/nyt-monthly-temp.png){fig-alt="A dot plot of monthly global temperatures compared to the 20th-century average, where monthly global temperatures are increasing over time. Nearly every month since the mid-1970s is warmer than the 20th-century average, with 12 record-breaking hot months occurring between 2015-2023."}
 
 ## Example 3 (Fig 1A from [Chapman et al. 2024](https://www.science.org/doi/full/10.1126/science.adh8874){target="_blank"}):
 
 **Alt text:** A heatmap of global species observations where the highest concentration of observations occur in high-income countries, particularly in the USA and European nations.
 
-<img src="images/chapman-etal-2024.png" alt="A heatmap of global species observations where the highest concentration of observations occur in high-income countries, particularly in the USA and European nations." width="700px">
+<img src="../images/lab-materials/chapman-etal-2024.png" alt="A heatmap of global species observations where the highest concentration of observations occur in high-income countries, particularly in the USA and European nations." width="700px">
 
 ## Example 4 (Write alt text for a viz of your choice)
 
