--- a/course-materials/week3.qmd
+++ b/course-materials/week3.qmd
@@ -93,18 +93,22 @@ Oftentimes, packages that are built to interface with APIs will include their ow
 
 ::: {.callout-important}
 ## TODO
-- recreating USDM plot exercise is currently split into two parts (weeks 2 & 4) -- combine into one lab for this week
+- recreating USDM plot exercise is currently split into two parts (below & week 4) -- combine into one lab for this week
 :::
 
 ### A. Prepare a `week3-lab.qmd` file
 
 Add a new blank file to your class repo at the following location: `EDS-240-class-examples/week3/week3-lab.qmd.` Fill out the necessary YAML information (title, author, date + any other information you find helpful).
 
+### B. (OPTIONAL) Install Chrome extension for picking colors
+
+Install the [ColorZilla](https://chromewebstore.google.com/detail/colorzilla/bhlhnicpbhignbdhedgjhgdocnmhomnp){target="_blank"} Google Chrome extension (also available for [Firefox](https://www.colorzilla.com/firefox/){target="_blank"}), which makes it easy to select color values from webpages.
+
 ## {{< fa comments title="two speech bubbles" >}} Lab Materials {#lab-materials}
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lab Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
 |-------------------|-------------------|--------------|
-| [Lab 3 slides: Alt Text](lab/LAB-SLIDES-alt-text.qmd){target="_blank"} | [Lab 3 exercise: writing alt text](lab/LAB-EXERCISE-alt-text.qmd){target="_blank"} | [Lab 3 solution](lab/LAB-SOLUTION-alt-text.qmd){target="_blank"} |
+| [Lab 3 slides: USDM](lab/LAB-SLIDES-usdm-graphic-form.qmd){target="_blank"} | [Lab 3 exercise: recreate USDM viz](lab/LAB-EXERCISE-usdm-graphic-form.qmd){target="_blank"} | [Lab 3 solution](lab/LAB-SOLUTION-usdm-graphic-form.qmd){target="_blank"} |
 : {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
