--- a/course-materials/week2.qmd
+++ b/course-materials/week2.qmd
@@ -71,22 +71,18 @@ Save data to your class repo at `EDS-240-class-examples/week2/data/`:
 
 ::: {.callout-important}
 ## TODO
-- new lab content should include writing alt text (currently linked to week 3) + finding data (for FPM #1)
+- new lab content should include writing alt text + finding data (for FPM #1)
 :::
 
 ### A. Prepare a `week2-lab.qmd` file
 
 Add a new blank file to your class repo at the following location: `EDS-240-class-examples/week2/week2-lab.qmd.` Fill out the necessary YAML information (title, author, date + any other information you find helpful).
 
-### B. (OPTIONAL) Install Chrome extension for picking colors
-
-Install the [ColorZilla](https://chromewebstore.google.com/detail/colorzilla/bhlhnicpbhignbdhedgjhgdocnmhomnp){target="_blank"} Google Chrome extension (also available for [Firefox](https://www.colorzilla.com/firefox/){target="_blank"}), which makes it easy to select color values from webpages.
-
 ## {{< fa comments title="two speech bubbles" >}} Lab Materials
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lab Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
 |-------------------|-------------------|--------------|
-| [Lab 2 slides: USDM](lab/LAB-SLIDES-usdm-graphic-form.qmd){target="_blank"} | [Lab 2 exercise: recreate USDM viz](lab/LAB-EXERCISE-usdm-graphic-form.qmd){target="_blank"} | [Lab 2 solution](lab/LAB-SOLUTION-usdm-graphic-form.qmd){target="_blank"} |
+| [Lab 2 slides: Alt Text](lab/LAB-SLIDES-alt-text.qmd){target="_blank"} | [Lab 2 exercise: writing alt text](lab/LAB-EXERCISE-alt-text.qmd){target="_blank"} | [Lab 2 solution](lab/LAB-SOLUTION-alt-text.qmd){target="_blank"} |
 : {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
